  * Don't handle a "previous" image in the PNG or JNG decoder.
  * Don't override gamma with 1.0 when reading a grayscale PNG image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26576).
  * Update progress monitor for every PNG row instead of every pass (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=26589).
  * Impose a 10-million limit on dimensions when reading a PNG file.

2014-11-20  6.9.0-1 Cristy  <quetzlzacatenango@image...>
  * Fix double free / invalid read when converting jpg to pdb (thanks to
    Hanno).
  * Maximum XWD image size is 64Kx64K (thanks to Hanno).
  * Maximum DPX number of elements is 8 (thanks to Hanno).
  * Transient problem with SVG (reference
      http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26587).
  * Numerous buffer overflow fixes (thanks to Gynvael Coldwind and
    Mateusz Jurczyk of the Google Security Team).
  * Additional PNM sanity checks (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26682).
  * The SetImageBias() biad value is no longer ignored (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25732).
  * Area crop now returns the expected number of tiles (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26701).
  * Respect TGA ColorMapIndex field (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26738).
  * Clang does not support __alloc_size__, fix fabs() (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26739).
  * Support width and height resource limits.

2014-11-16  6.9.0-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-0, SVN revision 17067.

2014-11-03  6.9.0-0 Cristy  <quetzlzacatenango@image...>
  * Check for zero-sized rendered SVG image (bug report from
    Vladimir Davydov).

2014-11-01  6.8.9-10 Cristy  <quetzlzacatenango@image...>