@@ -2183,8 +2183,10 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
 #endif
 
 #ifdef PNG_SET_USER_LIMITS_SUPPORTED
-  /* Reject images with more than 10 million rows or columns */
-  png_set_user_limits(ping, 10000000L, 10000000L);
+  /* Reject images with too many rows or columns */
+  png_set_user_limits(ping,
+    (png_uint_32) MagickMin(0x7fffffff,GetMagickResourceLimit(WidthResource)),
+    (png_uint_32) MagickMin(0x7fffffff,GetMagickResourceLimit(HeightResource)));
 #endif /* PNG_SET_USER_LIMITS_SUPPORTED */
 
   /*
