@@ -15,7 +15,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26576).
   * Update progress monitor for every PNG row instead of every pass (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=26589).
-  * Impose a 10-million limit on dimensions when reading a PNG file.
+  * Reject input PNG with dimensions larger than specified with -limit width
+    and -limit height.
 
 2014-11-20  6.9.0-1 Cristy  <quetzlzacatenango@image...>
   * Fix double free / invalid read when converting jpg to pdb (thanks to
